Fixes for dashboard sidebar when it is collapsed, so that the text will not stick of the sidebar area, and to center the icons

--- a/app/assets/stylesheets/hyrax/sidebar.scss
+++ b/app/assets/stylesheets/hyrax/sidebar.scss
@@ -56,6 +56,29 @@ $gutter-width: $grid-gutter-width/2;
     }
   }
 
+  &:not(.maximized) {
+    .sidebar-action-text,
+    a span + span,
+    h5 {
+      display: none;
+    }
+
+    .nav li {
+      text-align: center;
+      a {
+        padding-left: 0;
+        padding-right: 0;
+      }
+      .fa {
+        margin-right: 0;
+      }
+    }
+
+    .nav-item {
+      width: $drawer-small;
+    }
+  }
+
   .sidebar-toggle {
     cursor: pointer;
     background-color: $body-background-color;
